--- a/package.json
+++ b/package.json
@@ -8,15 +8,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.2",
+    "@react-navigation/drawer": "^5.11.4",
+    "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "moment": "^2.29.1",
+    "native-base": "^2.15.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-elements": "^3.0.1",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.3"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "@builderx/utils": "^0.1.7",
+    "@expo/vector-icons": "^12.0.2",
+    "@react-navigation/native": "^5.8.10",
+    "firebase": "^8.2.1",
+    "react-native-vector-icons": "^7.1.0"
   },
   "private": true
 }
